<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_margin="2dp"
        android:layout_marginLeft="10dp"
        android:layout_toRightOf="@id/imageLogo"
        android:background="@drawable/titleback"
        android:fontFamily="cursive"
        android:text="@string/title_start"
        android:textAlignment="center"
        android:textColor="@color/colorWhite"
        android:textSize="50dp"
        android:textStyle="bold" />


    <TextView
        android:id="@+id/userName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="40dp"
        android:text="@string/userName"
        android:textSize="30dp" />


    <TextView
        android:id="@+id/swUser"
        android:layout_width="370dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/userName"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="0dp"
        android:hint="@string/name_last_name"
        android:textSize="30dp" />


    <TextView
        android:id="@+id/contPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="70dp"
        android:layout_toRightOf="@+id/imageCont"
        android:text="@string/phone"
        android:textSize="15dp" />

    <TextView
        android:id="@+id/contMail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="50dp"
        android:layout_toRightOf="@+id/imageCont"
        android:text="@string/contacts_eMail"
        android:textSize="15dp" />

    <ImageView
        android:id="@+id/imageCont"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentBottom="true"
        android:layout_margin="20dp"
        app:srcCompat="@drawable/icon_mail" />

    <ImageView
        android:id="@+id/imageLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        app:srcCompat="@drawable/logo_heartrate" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:layout_above="@+id/imageCont"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="3dp"
        android:background="@color/colorPink" />


    <Button
        android:id="@+id/butSaveBl"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_below="@+id/entDate"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="29dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/button_style"
        android:drawableLeft="@drawable/ic_save"
        android:fontFamily="casual"
        android:gravity="left|center_vertical"
        android:paddingLeft="130dp"
        android:text="@string/save"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/imaProf"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_below="@+id/title"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="5dp"
        app:srcCompat="@drawable/ic_prof" />

    <TextView
        android:id="@+id/txtUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/swUser"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:layout_toStartOf="@+id/divVert"
        android:text="@string/upper"
        android:textColor="@color/colorBlack"
        android:textSize="30dp" />

    <TextView
        android:id="@+id/txtDw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtUp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="20dp"
        android:layout_toStartOf="@+id/divVert"
        android:text="@string/down"
        android:textColor="@color/colorBlack"
        android:textSize="30dp" />

    <TextView
        android:id="@+id/txtPl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtDw"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="20dp"
        android:layout_toStartOf="@+id/divVert"
        android:text="@string/pulse"
        android:textColor="@color/colorBlack"
        android:textSize="30dp" />

    <TextView
        android:id="@+id/txtTach"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtPl"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="20dp"
        android:layout_toStartOf="@+id/divVert"
        android:text="@string/tachycardia"
        android:textColor="@color/colorBlack"
        android:textSize="30dp" />

    <View
        android:id="@+id/divVert"
        android:layout_width="3dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/butSaveBl"
        android:layout_below="@+id/swUser"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="@color/colorPink" />

    <EditText
        android:id="@+id/editUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/swUser"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:layout_toEndOf="@+id/divVert"
        android:ems="5"
        android:gravity="center"
        android:inputType="number"
        android:textSize="22dp"
        android:hint="@string/def"/>

    <EditText
        android:id="@+id/editDw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editUp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:layout_toEndOf="@+id/divVert"
        android:ems="5"
        android:gravity="center"
        android:inputType="number"
        android:textSize="22dp"
        android:hint="@string/def" />

    <EditText
        android:id="@+id/editPl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editDw"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:layout_toEndOf="@+id/divVert"
        android:ems="5"
        android:gravity="center"
        android:inputType="number"
        android:textSize="22dp"
        android:hint="@string/def" />

    <CheckBox
        android:id="@+id/checkTach"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_below="@+id/editPl"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:layout_toEndOf="@+id/divVert"
        android:textSize="22dp"
        android:text="@string/yes" />

    <TextView
        android:id="@+id/entDate"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtTach"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="10dp"
        android:gravity="center"
        android:layout_toStartOf="@+id/divVert"
        android:text="@string/date"
        android:textSize="30dp"
        android:inputType="date"
        android:background="@color/setParam"/>

    <TextView
        android:id="@+id/entTime"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtTach"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:layout_toEndOf="@+id/divVert"
        android:background="@color/setParam"
        android:gravity="center"
        android:inputType="time"
        android:text="@string/time"
        android:textSize="30dp" />

</RelativeLayout>