<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_margin="2dp"
        android:layout_marginLeft="10dp"
        android:layout_toRightOf="@id/imageLogo"
        android:background="@drawable/titleback"
        android:fontFamily="cursive"
        android:text="@string/title_start"
        android:textAlignment="center"
        android:textColor="@color/colorWhite"
        android:textSize="50dp"
        android:textStyle="bold" />


    <TextView
        android:id="@+id/userName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="40dp"
        android:text="@string/userName"
        android:textSize="30dp" />


    <EditText
        android:id="@+id/entUser"
        android:layout_width="370dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/userName"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="0dp"
        android:hint="@string/name_last_name"
        android:textSize="30dp" />

    <TextView
        android:id="@+id/userBrd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/entUser"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="20dp"
        android:text="Birthday"
        android:textSize="30dp" />

    <Spinner
        android:id="@+id/spinDay"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:layout_below="@+id/userBrd"
        android:layout_marginLeft="15dp"
        android:hint="Day"
        android:scrollbarSize="20dp"
        android:textSize="30sp" />

    <Spinner
        android:id="@+id/spinMon"
        android:layout_width="140dp"
        android:layout_height="30dp"
        android:layout_below="@+id/userBrd"
        android:layout_marginLeft="5dp"
        android:layout_toRightOf="@+id/spinDay"
        android:hint="Month"
        android:scrollbarSize="20dp"
        android:textSize="30dp" />

    <Spinner
        android:id="@+id/spinYear"
        android:layout_width="120dp"
        android:layout_height="30dp"
        android:layout_below="@+id/userBrd"
        android:layout_marginLeft="5dp"
        android:layout_toRightOf="@+id/spinMon"
        android:hint="Year"
        android:scrollbarSize="20dp"
        android:textSize="30dp" />


    <TextView
        android:id="@+id/contPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="70dp"
        android:layout_toRightOf="@+id/imageCont"
        android:text="@string/phone"
        android:textSize="15dp" />

    <TextView
        android:id="@+id/contMail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="50dp"
        android:layout_toRightOf="@+id/imageCont"
        android:text="@string/contacts_eMail"
        android:textSize="15dp" />

    <ImageView
        android:id="@+id/imageCont"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentBottom="true"
        android:layout_margin="20dp"
        app:srcCompat="@drawable/icon_mail" />

    <ImageView
        android:id="@+id/imageLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        app:srcCompat="@drawable/logo_heartrate" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:layout_above="@+id/imageCont"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="3dp"
        android:background="@color/colorPink" />

    <Button
        android:id="@+id/butSave"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_below="@+id/spinDay"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/button_style"
        android:drawableLeft="@drawable/ic_save"
        android:fontFamily="casual"
        android:gravity="left|center_vertical"
        android:paddingLeft="130dp"
        android:text=" Save"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/butBlood"
        android:layout_width="180dp"
        android:layout_height="70dp"
        android:layout_below="@+id/butSave"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_style"
        android:fontFamily="casual"
        android:text="Blood"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/butStat"
        android:layout_width="180dp"
        android:layout_height="70dp"
        android:layout_below="@+id/butSave"
        android:layout_alignParentRight="true"
        android:layout_marginTop="20dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/button_style"
        android:fontFamily="casual"
        android:text="Statistic"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/imaProf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="5dp"
        app:srcCompat="@drawable/ic_prof" />

</RelativeLayout>